fix: the drop ddown overlap issue

--- a/style.css
+++ b/style.css
@@ -39,20 +39,6 @@ body {
 
 /* ================= HEADER ================= */
 
-
-header {
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 1.5rem 9%;
-    background-color: transparent;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-    background-color: #1f3f5b;
-}
-
 .logo {
     font-size: 4rem;
     color: #3a89c9;
@@ -64,6 +50,19 @@ header {
 
 .logo:hover {
     transform: scale(1.1);
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.5rem 9%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 9999;
+    background-color: #1f3f5b;
 }
 
 header ul {
@@ -620,6 +619,7 @@ span {
     text-align: center;
     border-top: 2px solid #3a89c9;
     display: none;
+    z-index: 9999;
   }
 
   header ul.active {
